Added listing of Tweets about app to unauthenticated home page.

--- a/twitinerary/templates/home.html
+++ b/twitinerary/templates/home.html
@@ -4,6 +4,7 @@
     <ol>
       <li><a href="{% url twitinerary.views.oauth.authenticate %}">Authenticate with Twitter</a>.</li>
     </ol>
+    <ul id="tweets-about-us"></ul>
   {% else %}
     <div id="tabs">
       <ul>
