--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/jquery.cookie.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/jquery_extensions.js"></script>
 
+  {% if request.user.is_authenticated %}
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/notifier.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/url_shortener.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/image_uploader.js"></script>
@@ -23,7 +24,11 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweet_edit_state.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/datetime_humanizer.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/next_scheduled_tweet.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init_authenticated.js"></script>
+  {% else %}
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweets_about.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init_unauthenticated.js"></script>
+  {% endif %}
   </head>
 
   <body>
